--- a/AZDORestApiExplorer/Presentation/Views/Areas/BuildMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Areas/BuildMain.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl 
-    x:Class="AZDORestApiExplorer.Presentation.BuildMain"
+    x:Class="AZDORestApiExplorer.Presentation.Views.BuildMain"
     x:Name="thisBuildMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -44,12 +44,8 @@
             </Style>
         </dxlc:LayoutGroup.GroupBoxStyle>
 
-        <dxlc:LayoutGroup Header="Resource1" >
-            <!--<ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.RepositoryMainRegion}" />-->
-        </dxlc:LayoutGroup>
-
-        <dxlc:LayoutGroup Header="Resource2" >
-            <!--<ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.RepositoryMainRegion}" />-->
+        <dxlc:LayoutGroup Header="Builds" >
+            <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.BuildMainRegion}" />
         </dxlc:LayoutGroup>
 
     </dxlc:LayoutGroup>
