--- a/AZDORestApiExplorer/Presentation/Views/MainWindow.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/MainWindow.xaml
@@ -112,24 +112,13 @@
                         <!--Put the area of current interest here 
                             until we figure out how to make this easy to navigate-->
 
-                        <dxdo:LayoutPanel Caption="Git" AutoHidden="True">
+                        <dxdo:LayoutPanel Caption="Build">
+                            <local:BuildMain />
+                        </dxdo:LayoutPanel>
+
+
+                        <dxdo:LayoutPanel Caption="Git">
                             <local:GitMain />
-                        </dxdo:LayoutPanel>
-
-                        <dxdo:LayoutPanel Caption="Test" >
-                            <local:TestMain />
-                        </dxdo:LayoutPanel>
-
-                        <dxdo:LayoutPanel Caption="Tokens" >
-                            <local:TokensMain />
-                        </dxdo:LayoutPanel>
-
-                        <dxdo:LayoutPanel Caption="Work Item Tracking"  >
-                            <local:WorkItemTrackingMain />
-                        </dxdo:LayoutPanel>
-
-                        <dxdo:LayoutPanel Caption="Work Item Tracking Process" AutoHidden="True">
-                            <local:WorkItemTrackingProcessMain />
                         </dxdo:LayoutPanel>
 
                     </dxdo:LayoutGroup>
@@ -149,33 +138,33 @@
                     <dxdo:FloatGroup MinWidth="1200" MinHeight="800" Orientation="Vertical">
 
                         <dxdo:LayoutPanel Caption="Collections"                     
-                            ItemHeight="65"  ShowCollapseButton="True" ShowCloseButton="False">
+                            ItemHeight="65"  ShowCollapseButton="True" ShowCloseButton="False" AllowDrag="False">
                             <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.CollectionMainRegion}" />
                         </dxdo:LayoutPanel>
 
                         <dxdo:LayoutGroup Orientation="Horizontal">
                             
-                            <dxdo:TabbedGroup>
+                            <dxdo:TabbedGroup AllowDrag="False">
 
-                                <dxdo:LayoutPanel Caption="Commands (GET)">
+                                <dxdo:LayoutPanel Caption="Commands (GET)" AllowDrag="False" AllowClose="False" >
                                     <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.CommandGetRegion}" />
                                 </dxdo:LayoutPanel>
 
-                                <dxdo:LayoutPanel Caption="Commands (PATCH)" >
+                                <dxdo:LayoutPanel Caption="Commands (PATCH)" AllowClose="False" AllowDrag="False" >
                                     <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.CommandPatchRegion}" />
                                 </dxdo:LayoutPanel>
 
-                                <dxdo:LayoutPanel Caption="Commands (POST)">
+                                <dxdo:LayoutPanel Caption="Commands (POST)" AllowClose="False" AllowDrag="False" >
                                     <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.CommandPostRegion}" />
                                 </dxdo:LayoutPanel>
 
-                                <dxdo:LayoutPanel Caption="Commands (PUT)" >
+                                <dxdo:LayoutPanel Caption="Commands (PUT)" AllowClose="False" AllowDrag="False" >
                                     <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.CommandPutRegion}" />
                                 </dxdo:LayoutPanel>
 
                             </dxdo:TabbedGroup>
 
-                            <dxdo:LayoutPanel Caption="Context Level Providers"  MinWidth="375" ItemWidth="400" >
+                            <dxdo:LayoutPanel Caption="Context Level Providers"  MinWidth="375" ItemWidth="400" AllowClose="False" AllowDrag="False">
                                 <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ContextMainRegion}" />
                             </dxdo:LayoutPanel>
 
@@ -185,7 +174,7 @@
                     
                     <dxdo:FloatGroup>
 
-                        <dxdo:LayoutPanel Caption="HTTP Exchange" MinWidth="400">
+                        <dxdo:LayoutPanel Caption="HTTP Exchange" MinWidth="500">
                             <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.HTTPExchangeMainRegion}" />
                         </dxdo:LayoutPanel>
                         
@@ -207,6 +196,11 @@
                         
                     </dxdo:AutoHideGroup>
 
+                    <!--
+                        Put the Implemented Panels here unitl we figure out how to better do this
+                        Area of current foucs goes above 
+                    -->
+                    
                     <dxdo:AutoHideGroup DockType="Bottom">
                         
                         <!--<dxdo:LayoutPanel Caption="HTTP Exchange" >
@@ -223,6 +217,22 @@
 
                         <dxdo:LayoutPanel Caption="Dashboard" AutoHidden="True" TabBackgroundColor="Red" >
                             <local:DashboardMain />
+                        </dxdo:LayoutPanel>
+
+                        <dxdo:LayoutPanel Caption="Test" AutoHidden="True">
+                            <local:TestMain />
+                        </dxdo:LayoutPanel>
+
+                        <dxdo:LayoutPanel Caption="Tokens" AutoHidden="True">
+                            <local:TokensMain />
+                        </dxdo:LayoutPanel>
+
+                        <dxdo:LayoutPanel Caption="Work Item Tracking" AutoHidden="True" >
+                            <local:WorkItemTrackingMain />
+                        </dxdo:LayoutPanel>
+
+                        <dxdo:LayoutPanel Caption="Work Item Tracking Process" AutoHidden="True">
+                            <local:WorkItemTrackingProcessMain />
                         </dxdo:LayoutPanel>
 
                         <dxdo:LayoutPanel Caption="Future Output" AutoHidden="True">
@@ -249,9 +259,7 @@
 
                                     </dxlc:LayoutGroup>
 
-                                    <dxlc:LayoutGroup Header="Build" >
 
-                                    </dxlc:LayoutGroup>
 
                                     <dxlc:LayoutGroup Header="Cloud Load Test" >
 
