--- a/AZDORestApiExplorer.Build/Presentation/Views/BuildMain.xaml
+++ b/AZDORestApiExplorer.Build/Presentation/Views/BuildMain.xaml
@@ -39,7 +39,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <!--<RowDefinition Height="*" />-->
         </Grid.RowDefinitions>
 
         <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
@@ -52,7 +52,12 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <dxg:GridColumn FieldName="name" />
+            
+            <dxg:GridColumn FieldName="id" />
+            <dxg:GridColumn FieldName="buildNumber" />
+            <dxg:GridColumn FieldName="sourceBranch" />
+            <dxg:GridColumn FieldName="sourceVersion" />
+            <dxg:GridColumn FieldName="repository.name" />
         </dxg:GridControl>
 
         <dxe:TextEdit Grid.Row="2"
