--- a/AZDORestApiExplorer.Build/Presentation/Views/AuthorizedResourceMain.xaml
+++ b/AZDORestApiExplorer.Build/Presentation/Views/AuthorizedResourceMain.xaml
@@ -1,5 +1,5 @@
 <vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.Build.Presentation.Views.BuildMain"
+    x:Class="AZDORestApiExplorer.Build.Presentation.Views.AuthorizedResourceMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://www.codeplex.com/prism"
@@ -38,7 +38,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
+            <!--<RowDefinition Height="Auto" />-->
             <!--<RowDefinition Height="*" />-->
         </Grid.RowDefinitions>
 
@@ -52,31 +52,17 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-            
-            <dxg:GridColumn FieldName="id" />
-            <dxg:GridColumn FieldName="buildNumber" />
-            <dxg:GridColumn FieldName="definition.name" />
-            <dxg:GridColumn FieldName="sourceBranch" />
-            <dxg:GridColumn FieldName="sourceVersion" />
-            <dxg:GridColumn FieldName="repository.name" />
-            <dxg:GridColumn FieldName="queue.name" />
-            <dxg:GridColumn FieldName="queue.pool.name" />
-            <!--<dxg:GridColumn FieldName="plan.planId" />--> <!--This is Array-->
-            <dxg:GridColumn FieldName="project.name" />
-            <dxg:GridColumn FieldName="requestedFor.displayName" />
-            <dxg:GridColumn FieldName="requestedBy.displayName" />
 
-            <dxg:GridColumn FieldName="parameters" />
-            <dxg:GridColumn FieldName="reason" />
-            <dxg:GridColumn FieldName="triggerInfo.cisourceBranch" />
-            <dxg:GridColumn FieldName="triggerInfo.cisourceSha" />
-            <dxg:GridColumn FieldName="triggerInfo.citriggerRepository" />
-            <dxg:GridColumn FieldName="triggerInfo.scheduleName" />            
+            <dxg:GridColumn FieldName="id" />
+            <dxg:GridColumn FieldName="name" BestFitModeOnSourceChange="VisibleRows" />
+            <dxg:GridColumn FieldName="type" />
+            <dxg:GridColumn FieldName="authorized" />            
+ 
         </dxg:GridControl>
 
-        <dxe:TextEdit Grid.Row="2"
+        <!--<dxe:TextEdit Grid.Row="2"
             Text="{Binding Results.SelectedItem.url}"
-            TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+            TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>-->
 
     </Grid>
 
