--- a/AZDORestApiExplorer.Build/Presentation/Views/DefinitionMain.xaml
+++ b/AZDORestApiExplorer.Build/Presentation/Views/DefinitionMain.xaml
@@ -52,12 +52,18 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
+            
+            <dxg:GridColumn FieldName="project.name" />
             <dxg:GridColumn FieldName="id" />
             <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="authoredBy.displayName" Header="Authored By" />
             <dxg:GridColumn FieldName="quality" />
             <dxg:GridColumn FieldName="path" />
             <dxg:GridColumn FieldName="type" />
-            
+            <dxg:GridColumn FieldName="queue.name" />
+            <dxg:GridColumn FieldName="queue.pool.name" />            
+            <dxg:GridColumn FieldName="queueStatus" />
+
         </dxg:GridControl>
 
         <dxe:TextEdit Grid.Row="2"
