--- a/AZDORestApiExplorer/Presentation/Views/Areas/BuildMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Areas/BuildMain.xaml
@@ -52,6 +52,10 @@
             <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.BuildMainRegion}" />
         </dxlc:LayoutGroup>
 
+        <dxlc:LayoutGroup Header="Controllers" >
+            <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ControllerMainRegion}" />
+        </dxlc:LayoutGroup>
+
         <dxlc:LayoutGroup Header="Definitions" >
             <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.DefinitionMainRegion}" />
         </dxlc:LayoutGroup>
