--- a/AZDORestApiExplorer/Presentation/Views/CommandsGet.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/CommandsGet.xaml
@@ -145,6 +145,13 @@
                             		ToolTip="{Binding GetGeneralSettingsToolTip, FallbackValue='GetGeneralSettings ToolTip' }" />
                             </dxlc:LayoutItem>
  
+                            <dxlc:LayoutItem>
+                                <Button 
+                            		Command="{Binding GetOptionsCommand }"
+                            		Content="{Binding GetOptionsContent, FallbackValue='GetOptions' }"
+                            		ToolTip="{Binding GetOptionsToolTip, FallbackValue='GetOptions ToolTip' }" />
+                            </dxlc:LayoutItem>
+                            
                         </dxlc:LayoutGroup>
                         
                     </dxlc:LayoutGroup>
