Added Settings and Fixed GeneralSettings

--- a/AZDORestApiExplorer/Presentation/Views/Areas/BuildMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Areas/BuildMain.xaml
@@ -72,6 +72,10 @@
             <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ResourceMainRegion}" />
         </dxlc:LayoutGroup>
 
+        <dxlc:LayoutGroup Header="Settings" >
+            <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.SettingMainRegion}" />
+        </dxlc:LayoutGroup>
+
     </dxlc:LayoutGroup>
 
 </UserControl>
