--- a/AZDORestApiExplorer/Presentation/Views/CommandsGet.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/CommandsGet.xaml
@@ -151,7 +151,14 @@
                             		Content="{Binding GetOptionsContent, FallbackValue='GetOptions' }"
                             		ToolTip="{Binding GetOptionsToolTip, FallbackValue='GetOptions ToolTip' }" />
                             </dxlc:LayoutItem>
-
+                            
+                            <dxlc:LayoutItem>
+                                <Button 
+                            		Command="{Binding GetSettingsCommand }"
+                            		Content="{Binding GetSettingsContent, FallbackValue='GetSettings' }"
+                            		ToolTip="{Binding GetSettingsToolTip, FallbackValue='GetSettings ToolTip' }" />
+                            </dxlc:LayoutItem>
+                            
                             <dxlc:LayoutGroup Header="Build Level" IsCollapsed="False"
                                 Orientation="Vertical" View="GroupBox"
                                 Background="{StaticResource BuildColor}">
